# quasioptimal-data

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
sections/: README.md
sections/engineering-workforce/: IDENTIFICATION.md  PLAN.md  README.md
sections/engineering-workforce/claims/: README.md  _common.py
sections/engineering-workforce/claims/_TEMPLATE/: README.md
sections/engineering-workforce/claims/engineer-share-takeoff/: README.md  test.py
sections/engineering-workforce/claims/engineers-track-capital/: README.md  test.py
sections/engineering-workforce/claims/engineers-track-gdp/: README.md  test.py
sections/engineering-workforce/claims/patent-accumulation/: test.py  (+1 more)
sections/engineering-workforce/data_acquisition/: README.md  SCHEMA.md  TASKS.md  fetch_log.csv  mirrors-historical.md  mirrors-macro-capital.md  mirrors-numerators-modern.md  mirrors-patents.md  mirrors-population.md  sources.yaml
sections/engineering-workforce/notebooks/: 00_explore_panel.py
sections/engineering-workforce/outputs/: report.md
sections/engineering-workforce/pipeline/: analysis.py  build_panel.py  fetch.py  prepare_covariates.py  prepare_engineers.py  prepare_population.py  registry.py  report.py  schema.py  synthetic.py
sections/engineering-workforce/research/: README.md  data-sources-china.md  data-sources-global-historical.md  data-sources-uk-germany-europe.md  data-sources-us-california.md  literature-review.md
src/quasioptimal/: __init__.py  data.py  paths.py  viz.py
tests/: test_engineering_analysis.py  test_engineering_pipeline.py  test_paths.py
(+22 files in other folders)
