[project]
name = "quasioptimal-data"
version = "0.1.0"
description = "Data analysis backing quasioptimal claims, organized by section and claim."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pyarrow>=16.0",
    "openpyxl>=3.1",
    "requests>=2.32",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quasioptimal"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["quasioptimal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src/quasioptimal"]
